# internal/rest/boardshr/coauthors_get.go
@@ -5,25 +5,27 @@ import (
 	"net/http"
 	"strconv"
 
+	"github.com/go-park-mail-ru/2025_1_SuperChips/domain"
 	"github.com/go-park-mail-ru/2025_1_SuperChips/internal/rest"
 	auth "github.com/go-park-mail-ru/2025_1_SuperChips/internal/rest/auth"
 	"github.com/go-park-mail-ru/2025_1_SuperChips/internal/validator"
 )
 
 // GetCoauthors godoc
+//
 //	@Summary		Get coauthors
 //	@Description	Get coauthors of the board (user must be author of the board)
 //	@Tags			Board sharing [author]
 //	@Produce		json
 //	@Security		jwt_auth
 //
-//	@Param			board_id	path		int								true	"ID of the board"
+//	@Param			board_id	path		int																true	"ID of the board"
 //
-//	@Success		200			{object}	ServerResponse{data=[]string}	"The list of coauthors has been successfully received"
-//	@Failure		400			{object}	ServerResponse					"Invalid request parameters"
-//	@Failure		401			{object}	ServerResponse					"Unauthorized"
-//	@Failure		403			{object}	ServerResponse					"Forbidden - access denied"
-//	@Failure		500			{object}	ServerResponse					"Internal server error"
+//	@Success		200			{object}	ServerResponse{data=object{author=string,coauthors=[]string}}	"The list of coauthors has been successfully received"
+//	@Failure		400			{object}	ServerResponse													"Invalid request parameters"
+//	@Failure		401			{object}	ServerResponse													"Unauthorized"
+//	@Failure		403			{object}	ServerResponse													"Forbidden - access denied"
+//	@Failure		500			{object}	ServerResponse													"Internal server error"
 //
 //	@Router			/api/v1/boards/{board_id}/coauthors [get]
 func (b *BoardShrHandler) GetCoauthors(w http.ResponseWriter, r *http.Request) {
@@ -48,19 +50,20 @@ func (b *BoardShrHandler) GetCoauthors(w http.ResponseWriter, r *http.Request) {
 		return
 	}
 
-	names, err := b.BoardShrService.GetCoauthors(ctx, boardID, userID)
+	author, coauthors, err := b.BoardShrService.GetCoauthors(ctx, boardID, userID)
 	if err != nil {
 		handleBoardShrError(w, err)
 		return
 	}
 
 	type DataReturn struct {
-		Names []string `json:"names"`
+		Author    domain.Contact   `json:"author"`
+		Coauthors []domain.Contact `json:"coauthors"`
 	}
 
 	resp := rest.ServerResponse{
 		Description: "OK",
-		Data:        DataReturn{Names: names},
+		Data:        DataReturn{Author: author, Coauthors: coauthors},
 	}
 
 	rest.ServerGenerateJSONResponse(w, resp, http.StatusOK)
